Changed key generation for columnstore tables with primary key (#56)
In the 8.7.16 version of S2, if the table has PK, internalId is not populated.

Changed to populate PK instead of InternalId if the table has it
Changed the type of the InternalId field (starting from 8.7.16 it is returned as bytes)
Fixed offset validation for when_needed mode (used offset table instead of just running an observe query)
Fixed setting of information if the record is part of the snapshot when the snapshot is retaken
Fixed tests
Changed log level for tests as verbose logs caused OOM errors in the CI
Changed lowest supported version to 8.7.16

---------

Co-authored-by: Adalbert Makarovych <amakarovych0ua@singlestore.com>